--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
 
       <div class="image-01">
-         <img src="/person/person-4.png" alt="">
+         <img src="person-4.png" alt="">
       </div>
    </section>
    <p class="container-02-header">My Mission in <span>2022</span></p>      
