--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="Mission">
          <div class="image-02">
-            <img src="/illustrators/illustrator-1.png" alt="">
+            <img src="illustrator-1.png" alt="">
          </div>
          <h2>Mission</h2>
          <p>Amet minim mollit non deserunt
@@ -49,7 +49,7 @@
 
       <div class="Vission">
          <div class="image-02">
-            <img src="/illustrators/illustrator-2.png" alt="">
+            <img src="illustrator-2.png" alt="">
          </div>
          <h2>Vission</h2>
          <p>Amet minim mollit non deserunt
@@ -62,7 +62,7 @@
 
       <div class="Goals">
          <div class="image-02">
-            <img src="/illustrators/illustrator-3.png" alt="">
+            <img src="illustrator-3.png" alt="">
          </div>
          <h2>Goals</h2>
          <p>Amet minim mollit non deserunt
@@ -76,7 +76,7 @@
    
    <section class="container-03">
       <div class="image-03">
-         <img src="/pictures/coding.png" alt="">
+         <img src="coding.png" alt="">
       </div>
 
       <div class="container-03-text">
@@ -106,7 +106,7 @@
 
       </div>
       <div class="image-04">
-         <img src="/pictures/project.png" alt="">
+         <img src="project.png" alt="">
       </div>
 
    </section>
