add font effect

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <section class="container-01">
       <div class="text">
          <div class="intro-text">
-            <h1>Stay Focused On <span>Mission 2022</span> </h1>
+            <h1 class="font-effect-shadow-multiple">Stay Focused On <span>Mission 2022</span> </h1>
          </div>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
          Accusamus alias rem totam cupiditate excepturi ratione doloribus,
@@ -135,7 +135,7 @@
    </section>
   
    <footer>
-     <h1>Mission <span>2022</span></h1>
+     <h1 class="font-effect-shadow-multiple">Mission <span>2022</span></h1>
      <p>Hard work, Perseverance, and Determination for 2022</p>
    </footer>
    
